# gamecube-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
assets/: CMakeLists.txt
assets/textures/: CMakeLists.txt
cmake/: devkitppc.toolchain.cmake  devkitpro-gamecube.cmake  devkitpro.bin2s.cmake  devkitpro.elf2dol.cmake  devkitpro.gamecube.cmake  devkitpro.gxtexconv.cmake  gamecube.bin2s.cmake  gamecube.elf2dol.cmake  gamecube.gxtexconv.cmake  gamecube.macro.cmake  toolchain.gamecube.cmake
cmake/devkitpro/: devkitpro-config.cmake  devkitpro-gamecube.cmake  devkitpro-gxtexconv.cmake  devkitpro-helpers.cmake
cmake/devkitpro/libraries/: devkitpro-libogc.cmake
cmake/devkitpro/tools/: devkitpro-bin2s.cmake  devkitpro-elf2dol.cmake  devkitpro-gxtexconv.cmake
cmake/toolchains/: devkitppc.toolchain.cmake  gamecube.toolchain.cmake  shared.toolchain.cmake
cmake/toolchains/modules/platform/: NintendoGameCube.cmake
source/: CMakeLists.txt  gxsprites.c  template.c
